[package]
name = "rasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["ws"]}
futures-util = { version = "0.3.27", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
