[package]
name = "rasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["ws"]}
hyper = { version = "0.14.25", features = ["full"] }
tower = "0.4.13"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
