[package]
name = "rasta"
version = "0.1.0"
edition = "2021"
authors = ["Esbjörn Stenberg <me@stagrim.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws"]}
axum-macros = "0.3.7"
hyper = { version = "0.14.26", features = ["full"] }
tower = "0.4.13"
# Using git repo until fix is available in a release https://github.com/tower-rs/tower-http/issues/318
tower-http = { version = "0.4.1", features = ["normalize-path"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
cron = "0.12.0"
chrono = "0.4.24"
ts-rs = "6.2.1"
