[package]
name = "sasta"
version = "0.1.0"
edition = "2021"
authors = ["Esbjörn Stenberg <me@stagrim.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["ws", "multipart"] }
axum-macros = "0.5.0"
hyper = { version = "1.6.0", features = ["full"] }
tower = "0.5.2"
# Using git repo until fix is available in a release https://github.com/tower-rs/tower-http/issues/318
tower-http = { version = "0.6.6", features = ["full"] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "std",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
# See https://github.com/zslayton/cron/pull/116
cron = "0.15.0"
# cron = "0.12.1"
chrono = { version = "0.4.41", features = ["serde"] }
ts-rs = "11.0.1"
tracing-subscriber = "0.3.19"
redis = { version = "0.32.4", features = ["tokio-comp", "json"] }
regex = "1.11.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
crypto = { version = "0.5.1", features = ["digest"] }
sha2 = "0.10.9"
base16ct = { version = "0.2.0", features = ["alloc"] }
casta_protocol = { path = "../casta_protocol" }
lightningcss = "1.0.0-alpha.67"
minify-js = "0.6.0"
